--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,8 @@
 
 html,
 body {
+  background: var(--background-color);
+  color: var(--primary-text);
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
