--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,7 @@
 :root {
-  --background-color: #1a2028;
-  --primary-text: #fff;
-  --secondary-text: #bbb;
+  --background-color: #470063;
+  --primary-text: #c0c999;
+  --secondary-text: #ff74d4;
 }
 
 html,
