--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -1,4 +1,5 @@
 .backHome {
+  margin: 2em;
   background-color: black;
   color: white;
   padding: 1.5em;
@@ -8,10 +9,4 @@
 .backHome:hover {
   background-color: #ff36ab;
   cursor: pointer;
-}
-
-.header {
-  margin: 1em 1em 1em 0.5em;
-  padding-left: 15px;
-  text-align: center;
 }
