✨  add favorite button

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,5 @@
 :root {
-  --background-color: #470063;
+  --background-color: #110e21;
   --primary-text: #c0c999;
   --secondary-text: #ff74d4;
 }
