--- a/styles/track-item.module.css
+++ b/styles/track-item.module.css
@@ -15,6 +15,10 @@
   color: #ffb8de;
   grid-area: song;
 }
+.song:hover {
+  color: whitesmoke;
+  cursor: pointer;
+}
 
 .artist {
   color: var(--secondary-text);
