--- a/styles/buttons.module.css
+++ b/styles/buttons.module.css
@@ -1,33 +1,49 @@
 .love {
-  background-color: rgb(10, 93, 10);
+  /* background-color: rgb(10, 93, 10); */
   color: white;
   padding: 1.5em;
   border-radius: 2em;
 }
 
 .hate {
-  background-color: red;
+  /* background-color: red; */
   color: white;
   padding: 1.5em;
   border-radius: 2em;
 }
 
 .mine {
-  background-color: #ff36ab;
+  /* background-color: #ff36ab; */
   color: white;
   padding: 1.5em;
   border-radius: 2em;
 }
 
 .love:hover {
-  background-color: #06d6a0;
+  color: #6fffdb;
   cursor: pointer;
 }
 .hate:hover {
-  background-color: #e5383b;
+  color: #e5383b;
   cursor: pointer;
 }
 .mine:hover {
-  background-color: #b5179e;
+  color: rgb(255, 134, 154);
+  cursor: pointer;
+  font-size: 1.2em;
+}
+
+.btn {
+  border: 0;
+  border-radius: 0.25rem;
+  background: #1e88e5;
+  color: white;
+  font-family: -system-ui, sans-serif;
+  font-size: 1rem;
+  line-height: 1.2;
+  white-space: nowrap;
+  text-decoration: none;
+  padding: 0.25rem 0.5rem;
+  margin: 0.25rem;
   cursor: pointer;
 }
