--- a/styles/buttons.module.css
+++ b/styles/buttons.module.css
@@ -1,48 +1,14 @@
-.love {
-  /* background-color: rgb(10, 93, 10); */
-  color: white;
-  padding: 1.5em;
-  border-radius: 2em;
-}
-
-.hate {
-  /* background-color: red; */
-  color: white;
-  padding: 1.5em;
-  border-radius: 2em;
-}
-
-.favorite {
-  color: white;
-  padding: 1.5em;
-  border-radius: 2em;
-}
-
-.love:hover {
-  color: #6fffdb;
-  cursor: pointer;
-}
-.hate:hover {
-  color: #e5383b;
-  cursor: pointer;
-}
-.favorite:hover {
-  background-color: #ff36ab;
-  cursor: pointer;
-  font-size: 1.2em;
-}
-
 .btn {
-  border: 0;
-  border-radius: 0.25rem;
-  background: #1e88e5;
+  border: none;
+  border-radius: 0.25em;
+  background-color: #560bad;
   color: white;
-  font-family: -system-ui, sans-serif;
-  font-size: 1rem;
-  line-height: 1.2;
-  white-space: nowrap;
-  text-decoration: none;
-  padding: 0.25rem 0.5rem;
-  margin: 0.25rem;
+  padding: 1em;
+  margin: 1em;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: #ff36ab;
   cursor: pointer;
 }
