--- a/styles/trackDetails.module.css
+++ b/styles/trackDetails.module.css
@@ -1,35 +1,44 @@
-.trackDetails {
-  list-style: none;
-  display: grid;
-  grid-template: 1.6em 1.6em / 3.2em 1fr;
-  grid-template-areas:
-    "img title"
-    "img artist";
-  grid-column-gap: 15px;
-  align-items: center;
+.header {
+  margin-top: 2em;
 }
 
+.track {
+  color: #ff36ab;
+  padding: 3em 1em 1em 1em;
+  font-weight: bolder;
+  font-size: 1.2em;
+  display: block;
+}
+
+.mainContainer {
+  display: grid;
+  padding: 2em;
+  grid-template-rows: 30rem;
+  grid-template-areas: "img";
+}
+
+.mainContainer .song {
+  text-align: center;
+  padding-top: 0.5em;
+}
+
+.mainContainer .artist {
+  padding-top: 2em;
+  text-align: center;
+}
+
+.footer {
+  margin-top: 3rem;
+  display: grid;
+  grid-auto-flow: column;
+  justify-items: center;
+  column-gap: 0.5em;
+}
 .img {
   grid-area: img;
   width: 100%;
   height: 100%;
+  max-height: 30rem;
   object-fit: cover;
-  border-radius: 10px;
-}
-
-.title {
-  grid-area: title;
-}
-
-.artist {
-  grid-area: artist;
-  color: var(--secondary-text);
-}
-
-.trackItem .title {
-  align-self: end;
-}
-
-.trackItem .artist {
-  align-self: start;
+  border-radius: 25px;
 }
