--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,6 @@
 :root {
-  --background-color: #110e21;
-  --primary-text: #c0c999;
+  --background-color: #073b4c;
+  --primary-text: #b5c99a;
   --secondary-text: #ff74d4;
 }
 
